fix: set max-height to gallery images
Limit gallery images height so they are not too tall

--- a/src/containers/Gallery.css
+++ b/src/containers/Gallery.css
@@ -17,4 +17,7 @@
     width: 100%;
     height: 100%;
     margin: 5px 0;
+    max-height: 300px;
+    object-fit: cover;
+    object-position: center;
 }
